--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,17 +17,23 @@ jobs:
         mkdir -p ~/.ssh
         echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_ed25519
         chmod 600 ~/.ssh/id_ed25519
-
-    - name: Install Ansible
-      run: |
-        sudo apt update
-        sudo apt install -y ansible
         
     - name: Install Ansible
       run: |
         sudo apt update
         sudo apt install -y ansible
-        cd taller3
+
+    - name: Install boto3 and Ansible AWS collection
+      run: |
+        pip install boto3 botocore
+        ansible-galaxy collection install amazon.aws
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
         
     - name: Run Ansible playbook
       working-directory: taller3
