--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,4 +36,4 @@ jobs:
     - name: Run Ansible playbook
       working-directory: taller3
       run: |
-        ansible-playbook crud.yml --private-key ~/.ssh/id_ed25519 -e "ansible_python_interpreter=/opt/pipx/venvs/ansible-core/bin/python"
+        ansible-playbook crud.yml --private-key ~/.ssh/id_ed25519
