--- a/taller3/inventario.aws_ec2.yml
+++ b/taller3/inventario.aws_ec2.yml
@@ -4,7 +4,7 @@ filters:
 regions:
   - us-east-1
 hostnames:
-  - public_ip_address
+  - ip-address
 compose:
   ansible_user: "'ec2-user'"
   ansible_ssh_private_key_file: "'/home/ec2-user/ansible-key.pem'"
