--- a/taller3/inventario.aws_ec2.yml
+++ b/taller3/inventario.aws_ec2.yml
@@ -7,7 +7,7 @@ hostnames:
   - ip-address
 compose:
   ansible_user: "'ec2-user'"
-  ansible_ssh_private_key_file: "'/home/ec2-user/ansible-key.pem'"
+  ansible_ssh_private_key_file: "'~/.ssh/id_ed25519'"
 keyed_groups:
   - key: tags.Application
     separator: ''
