--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,10 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
+
+    - name: Retrieve Vault password from AWS Secrets Manager
+      run: |
+        ansible-playbook retrieve_vault_password.yml
         
     - name: Debug inventory output
       working-directory: taller3
