--- a/retrieve_vault_password.yml
+++ b/retrieve_vault_password.yml
@@ -16,5 +16,5 @@
     - name: Write Vault password to a temporary file
       copy:
         content: "{{ vault_password_output.stdout }}"
-        dest: "ansible-test/vault_pass.txt"
+        dest: "taller4/vault_pass.txt"
       run_once: true
