--- a/taller4/inventario.aws_ec2.yml
+++ b/taller4/inventario.aws_ec2.yml
@@ -4,10 +4,10 @@ filters:
 regions:
   - us-east-1
 hostnames:
-  - private-ip-address
+  - ip-address
 compose:
   ansible_user: "'ec2-user'"
-  ansible_ssh_private_key_file: "'/home/ec2-user/taller3/ansible-key.pem'"
+  ansible_ssh_private_key_file: "'~/.ssh/id_ed25519'"
 keyed_groups:
   - key: tags.Application
     separator: ''
