--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ name: Deploy Ansible to EC2
 on:
   push:
     branches: [main]
+  workflow_dispatch:  # ← esto habilita ejecución manual
 
 jobs:
   deploy:
