--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         ansible-inventory -i inventario.aws_ec2.yml --list
         
-    - name: Run Ansible playbook
+    - name: Run Ansible playbook.
       working-directory: taller4
       run: |
         ansible-playbook site.yml --private-key ~/.ssh/id_ed25519
